# dandi-schema

./: .autorc  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini  versioneer.py
.claude/skills/dandi-linkml-validation-report/: SKILL.md
.claude/skills/dandi-linkml-validation-report/references/: DESIGN.md  OUTPUT.md
.claude/skills/dandi-linkml-validation-report/scripts/: fetch_metadata.py  generate_report.py  validate_metadata.py
.github/workflows/: lint.yml  publish-schemata.yml  release.yml  test-dandi-cli.yml  test-linkml-behavior.yml  test-nonetwork.yml  test-schema.yml  test.yml  typing-linkml-behavior.yml  typing.yml
dandischema/: __init__.py  _version.py  conf.py  consts.py  dandi.yml  datacite.py  exceptions.py  metadata.py  model_types.py  models.py  models.yaml  models_linkml.py  models_merge.yaml  models_orig.py  models_overlay.yaml  pytest_plugin.py  types.py  utils.py
dandischema/_resources/: spdx_license_ids.json
dandischema/datacite/: __init__.py
dandischema/datacite/schema/: README.md  inveniosoftware-4.5-81-g160250d.json
dandischema/datacite/tests/: test_datacite.py  test_datacite_event.py  test_doi_improvements.py
dandischema/digests/: dandietag.py  zarr.py
dandischema/digests/tests/: test_dandietag.py  test_zarr.py
dandischema/models_linkml/: asset.json  dandiset.json  published-asset.json  published-dandiset.json
dandischema/models_pydantic/: asset.json  context.json  dandiset.json  published-asset.json  published-dandiset.json
dandischema/tests/: conftest.py  test_conf.py  test_datacite.py  test_google_dataset_metadata.py  test_metadata.py  test_models.py  test_utils.py  utils.py
dandischema/tests/data/metadata/: asset3_01.json  asset4_01.json  asset4_02.json  asset_001.json  meta_000004.json  meta_000004old.json  meta_000008.json
dandischema/tests/data/metadata/DANDI/: meta_000004.json  meta_000004old.json  meta_000008.json
dandischema/tests/data/metadata/DANDI-ADHOC/: meta_000004.json  meta_000004old.json  meta_000008.json
dandischema/tests/data/metadata/EMBER-DANDI/: meta_000004.json  meta_000004old.json  meta_000008.json
docs/designs/: 20260411-schemaKey-mismatch-report.md
docs/designs/migration_to_linkml_playbook/: OVERVIEW.md  findings.md  log.md
docs/designs/migration_to_linkml_playbook/context/: README.md  patch-queue.md
docs/designs/migration_to_linkml_playbook/context/roles/: README.md  django.md  linkml.md  senior-developer.md  vue.md
docs/designs/migration_to_linkml_playbook/tools/: README.md
docs/designs/migration_to_linkml_playbook/tools/type-designator-demo/: README.md
docs/designs/migration_to_linkml_playbook/tools/type-designator-demo/schemakey_validation/: jsonschema_demo.py  pydantic_demo.py  schemakey_cases.json
docs/designs/migration_to_linkml_playbook/tools/type-designator-demo/schemas/: models_no_type_designator.py  models_type_designator.py  schema_no_type_designator.json  schema_no_type_designator.yaml  schema_type_designator.json  schema_type_designator.yaml
docs/designs/migration_to_linkml_playbook/tools/type-designator-demo/subtype_resolution/: bareasset_instance.json  jsonschema_demo.py  pydantic_demo.py
src/dandischema/: consts.py  models.py
src/dandischema/tests/: test_models.py  test_utils.py
src/dandischema/tests/data/metadata/: asset3_02.json  asset4_01.json  asset_001.json  meta_000004old.json  meta_000008.json
tests/linkml_behavior/: pytest.toml
tests/linkml_behavior/required_refinement/: _cases.py  bad_type_instance.yaml  conftest.py  schema.yaml  test_json_schema_validate.py  test_pydantic_validate.py  test_validate.py
tools/: api-with-schema.Dockerfile  commit-and-push-schemata  fetch_spdx_licenses.py  get-schema-version  linkml_conversion  linkml_conversion_fromlinkml  pubschemata.py  remove_impossible_slot_usage_notes.py
tools/linkml_conversion_tools/: find_schemakey_mismatches.py  remove_notes_by_pattern.py  remove_slot_usage_schemakey.py  sanitize-yaml  sort_license_type_permissible_values.py
tools/linkml_conversion_tools/pydantic_templates/: enum.py.jinja
