[build-system]
requires = ["setuptools >= 61.0.0", "versioningit"]
build-backend = "setuptools.build_meta"

[project]
name = "dandischema"
description = "Schemata for DANDI archive project"
readme = {file = "README.md", content-type = "text/markdown"}
license = "Apache-2.0"
authors = [
    {name = "DANDI developers", email = "team@dandiarchive.org"},
]
maintainers = [
    {name = "Yaroslav O. Halchenko", email = "debian@onerussian.com"},
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.10"
dependencies = [
    "jsonschema[format]",
    "packaging>=14.0",
    "pydantic-settings",
    "pydantic[email]~=2.4",
    "requests",
    "zarr_checksum",
]
dynamic = ["version"]

[project.urls]
Homepage = "http://dandiarchive.org"
"Source Code" = "https://github.com/dandi/dandischema"

[project.optional-dependencies]
style = [
    "flake8",
    "pre-commit",
]
test = [
    "anys",
    "mypy",
    "pytest",
    "pytest-cov",
    "pytest-rerunfailures",
]
all = [
    "dandischema[style]",
    "dandischema[test]",
]

[tool.setuptools.packages.find]
namespaces = true
include = ["dandischema*"]

[tool.versioningit]
default-version = "0+unknown"

[tool.versioningit.vcs]
exclude = ["schema-*"]

[tool.versioningit.format]
# Same format as versioneer
distance = "{base_version}+{distance}.{vcs}{rev}"
dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"
distance-dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"

[tool.versioningit.write]
file = "dandischema/_version.py"

[tool.black]
exclude = '\.eggs|\.git|\.mypy_cache|\.tox|\.venv|_build|buck-out|build|dist'

[tool.isort]
profile = "black"
force_sort_within_sections = true
reverse_relative = true
known_first_party = ["dandischema"]

[tool.mypy]
allow_incomplete_defs = false
allow_untyped_defs = false
ignore_missing_imports = false
no_implicit_optional = true
implicit_reexport = false
local_partial_types = true
pretty = true
show_error_codes = true
show_traceback = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
plugins = ["pydantic.mypy"]
exclude = ['^dandischema/_version\.py$']

[[tool.mypy.overrides]]
module = "dandischema._version"
follow_imports = "skip"

[tool.pydantic-mypy]
init_forbid_extra = true
