[metadata]
name = dandischema
url = http://dandiarchive.org
author = DANDI developers
author_email = team@dandiarchive.org
maintainer = Yaroslav O. Halchenko
maintainer_email = debian@onerussian.com
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering
license = Apache 2.0
description = Schemata for DANDI archive project
long_description = file:README.md
long_description_content_type = text/markdown; charset=UTF-8
platforms = OS Independent
project_urls =
    Source Code = https://github.com/dandi/dandischema

[options]
python_requires = >=3.9
install_requires =
    jsonschema[format]
    pydantic[email] ~= 2.4
    requests
    zarr_checksum
zip_safe = False
packages = find_namespace:
include_package_data = True

[options.packages.find]
include = dandischema*

[options.extras_require]
# I bet will come handy
#doc =
#    matplotlib >= 1.3.1
#    numpydoc
#    sphinx >=0.3
# PyNWB extensions we know and somewhat care about
# e.g. import whenever pynwb fails without them
style =
    flake8
    pre-commit
test =
    mypy
    pytest
    pytest-cov
    pytest-rerunfailures
all =
    #%(doc)s
    %(style)s
    %(test)s

[flake8]
max-line-length = 100
#ignore = D100,D101,D102,D103,D104,D105,D200,D201,D202,D204,D205,D208,D209,D210,D300,D301,D400,D401,D403,E24,E121,E123,E126,E226,E266,E402,E704,E731,F821,I100,I101,I201,N802,N803,N804,N806,W503,W504,W605
ignore = E203,W503
exclude =
    */__init__.py
    .tox/

[mypy]
allow_incomplete_defs = False
allow_untyped_defs = False
ignore_missing_imports = False
no_implicit_optional = True
implicit_reexport = False
local_partial_types = True
pretty = True
show_error_codes = True
show_traceback = True
strict_equality = True
warn_redundant_casts = True
warn_return_any = True
warn_unreachable = True
plugins = pydantic.mypy
exclude = _version\.py

[mypy-dandischema._version]
follow_imports = skip

[pydantic-mypy]
init_forbid_extra = True
warn_untypes_fields = True
